--- a/page1.html
+++ b/page1.html
@@ -5,126 +5,56 @@
     <title>What is the Command Line?</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
     <script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
+
     <link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css"/> 
+
   </head>
   <body>
     <div class="typewriter">
-      <h1>> Page 1</h1>
+      <h1>> More Commands to Learn</h1>
     </div>
-    
-    <!-- <img src="cli.gif" alt="The Firefox logo: a flaming fox surrounding the Earth."> -->
+    <h2>Congratulations, you made it! </h2>
 
-    <h2>What is the command line? </h2>
+    <p>You've succesfully used the three basic navigation commands to get to another page. Now, we're going to learn how to manipulate files in the directory. </p>
 
-    <p>The command line is a user interface to used to navigate and interact with the computer</p>
+    <h2>Directory Manipulation </h2>
 
+    <p>Here are a few more commands that you'll likely encounter pretty often while using the terminal. These are similar to cd 
+      because they need you to specify a target path or destination: </p>
     <ul>
-      <li> The command line accepts prompts or commands from the user </li>
-      <li> On mac and linux, the command line is the same as the terminal </li>
+      <li>mkdir x - creates a new directory x within the one you are currently in</li>
+      <li>rmdir y - remove the specificied directory y, but only if y is empty</li>
     </ul>
 
-    <h2> What does it do? </h2>
+    <h2>File Manipulation </h2>
 
-    <p> It is very similar to a GUI (graphical user interface), like the file explorer, except instead of using your mouse to perform actions, you use commands </p>
-
+    <p>Apart from manipulating directories, you might also need to work with files: </p>
     <ul>
-      <li> This allows for quicker access, more efficiency, and more elaborate commands to be performed </li>
+      <li>touch x - creates a new emtpy file inside the current directory called x</li>
+      <li>rm y - deletes the specificied file y</li>
+      <rmdir> </rmdir>
     </ul>
 
-    <h2> Commands to know </h2>
 
-    <ul>
-      <li> pwd </li>
-        <ul>
-          <li>"pwd" stands for present working directory</li>
-          <li>This lets the user know where they currently are operating in the command line</li>
-        </ul>
-      <li> ls/dir </li>
-        <ul>
-          <li>"ls" and "dir" list all of the files within the current directory the user is in</li>
-          <li>When operating with prompt command prompt use "dir", and when operating with terminal use "ls"</li>
-        </ul>
-      <li> cd </li>
-        <ul>
-            <li>"cd" stands for change directory</li>
-            <li>This allows for the user to move between folders and directories</li>
-        </ul>
-      <li> clear/cls </li>
-        <ul>
-          <li>"clear" and "cls" are used to clear the previous entries into the command line/terminal from the textbox</li>
-          <li>This makes visualizing outputs much simplier, and can help clean up the screen if the text gets too messy</li>
-          <li>When using terminal, use "clear", and when using command prompt, use "cls"</li>
-        </ul>
-      <li> mkdir</li>
-        <ul>
-            <li>"mkdir" stands for make directory</li>
-            <li>This command allows us to easy create new folders/directories</li>
-            <li>To use this command, type "mkdir" followed by a space and the name you want for your directory</li>
-        </ul>
-      <li> touch/echo </li>
-        <ul>
-            <li>"touch" and "echo" are commands that allow us to make files from the command line</li>
-            <li>touch is for the terminal, and to use this command, type "touch" folloed by a space and the name you want for you file, but be sure to include the file type at the end (ex. "myFile.txt")</li>
-            <li>echo is a command that prints whatever you type after it, but by using the ">" operator with a file name, the user can "echo" a new file</li>
-              <ul>
-                  <li>ex. "echo > myFile.txt"</li>
-              </ul>
-        </ul>
-      <li> rm </li>
-        <ul>
-            <li>"rm" stands for remove, and allows the user to remove files</li>
-            <li>to use the rm command, type "rm" followed by a space and the file you would like removed</li>
-                <ul>
-                  <li>ex. "rm myFile.txt"</li>
-                </ul>
-        </ul>
-      <li> mv </li>
-        <ul>
-          <li>"mv" stands for move, and allows us to move a file to another location</li>
-          <li>To use the mv command, type "mv" followed by a space and the file you want moved and the path to the new location</li>
-              <ul>
-                <li>ex. "mv myFile.txt" /Users/name/Desktop</li>
-              </ul>
-        </ul>
-    </ul>
+    <h2>Try it out!</h2>
+    <p>Make a new empty directory and file (name them whatever you'd like) and then remove both!</p>
 
-    <h2>Try it for yourself. Find what directory you are in, what files there are, and how to get to the next one.</h2>
-
-    <p>Hint: "pwd" will tell you where you are, "dir" will let you know what's in your directory, and cd will take you to the next directory.</p>
-    
-    <!-- Where terminal begins -->
-    <div class="terminalJ">
-      <script class="termScript">
-        $('body').terminal({
-            hello: function(what) {
-                this.echo('Hello, ' + what +
-                          '. Welcome to this terminal.');
-            }
-            ,ls: function(){
-                this.echo('myFile.txt');
-            }
-            ,pwd: function(){
-                this.echo('/Users/Documents');
-            }
-            ,touch: function(file){
-                this.echo('myFile.txt ' + file);
-            }
-            ,
-        }, {
-            greetings: 'Try out the terminal!'
-        });
-      </script>
+    <div id="terminal"> 
+      <script src="script.js"></script>
     </div>
 
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <h2>Next steps</h2>
 
-    <!-- Load our React component. -->
-    <script src="textinput.js"></script>
-
+    <p>If you'd like to learn more, Mozilla's <a href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/Understanding_client-side_tools/Command_line"> MDN Web Docs</a> has a great, in-depth guide.  </p>
+    <br> <br>
 
   </body>
+  <footer>
+    <hr>
+    <h4>Made by Narit Trikasemsak and Derek Hessinger for HackHolyoke 2022. </h4>
+    <a href="https://github.com/narittt/CLI-Simplified">Github Repository</a>
+    <p>Special thanks to Jakub T. Jankiewicz, who created <a href="https://terminal.jcubic.pl">jQuery Terminal</a></p>
+  </footer>
 </html>
