--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
     <hr>
     <h4>Made by Narit Trikasemsak and Derek Hessinger for HackHolyoke 2022. </h4>
     <a href="https://github.com/narittt/CLI-Simplified">Github Repository</a>
-    <p>Special thanks to Jakub T. Jankiewicz, who created <a href="https://terminal.jcubic.pl">jQuery Terminal</a></p>
+    <p>Special thanks to Jakub T. Jankiewicz the creator of <a href="https://terminal.jcubic.pl">jQuery Terminal</a></p>
   </footer>
 
 </html>
